feat: implement schedules API
